add user punishment management with ban functionality and related events